[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "electro-tensile-tester"
description = "Electromechanical tensile test software for Stretchable Conductive Materials."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
version = "0.1.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "PySide6",
    "PyAutoLab @ git+https://github.com/pyautolab/pyautolab",
    "pyautolab-hioki @ git+https://github.com/pyautolab/pyautolab-hioki",
    "pyautolab-optosigma @ git+https://github.com/pyautolab/pyautolab-optosigma"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pyinstaller",
    "flake8",
]
